2002-01-15  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (OGETTEXT): mark as GC-unsafe
	* package.d (cerror_package_locked): fixed a GC-safety bug

2002-01-15  Sam Steingold  <sds@gnu.org>

	* defs2.lisp (with-standard-io-syntax): bind
	SYSTEM::*PRIN-LINE-PREFIX* to NIL

2002-01-15  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe): flush the pending output _before_
	increasing indentation
	(describe-object) [symbol]: handle unbound special variables too

2002-01-14  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (*system-package-list*): new custom variable
	(without-package-lock): new extension macro
	* package.d (%SET-PACKAGE-LOCK): allow multiple packages
	* savemem.lisp (saveinitmem): default LOCKED-PACKAGES
	to *SYSTEM-PACKAGE-LIST*

2002-01-14  Sam Steingold  <sds@gnu.org>

	add :SCREEN to *FEATURES* when the "SCREEN" package is present
	* init.lisp: use #+SCREEN instead of (find-package "SCREEN")
	* spvw.d (*features*): add :SCREEN #ifdef SCREEN

2002-01-12  Sam Steingold  <sds@gnu.org>

	* trace.lisp (trace1): made macros traceable again (broken since
	the 2000-06-11 patch introducing MACRO type)
	(fdefinition-local): removed (replaced with LOCAL)
	(local): new macro (SETF-able)
	(local-function-name-p): new function
	* init.lisp (local): export from EXT

2002-01-11  Sam Steingold  <sds@gnu.org>

	close all inaccessible PIPE and SOCKET streams on GC, like file streams
	* stream.d (add_to_open_streams): new function
	(make_file_stream, make_terminal_stream, make_printer_stream):
	 use it instead of in-line code
	(MAKE-PIPE-INPUT-STREAM, MAKE-PIPE-OUTPUT-STREAM, MAKE-PIPE-IO-STREAM)
	(SOCKET-ACCEPT, SOCKET-CONNECT, SYS::MAKE-SOCKET-STREAM):
	 call add_to_open_streams() too
	Reported by Todd Sabin <tas@webspan.net>

2002-01-10  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): --version: print *FEATURES*

2002-01-10  Sam Steingold  <sds@gnu.org>

	* package.d (cerror_package_locked): error-format-string: print