@@ -87,9 +87,11 @@ to print the corresponding values, or T for all of them.")
                    pending-indent indent)
              (terpri target-stream)))
       ;; fill: if the buffer does not fit on the line, TERPRI
-      (when (<= (or *print-right-margin* sys::*prin-linelength*)
-                (+ (length buffer) (sys::line-position target-stream)))
-        (newline))
+      (let ((pos (sys::line-position target-stream)))
+        (when (and pos
+                   (<= (or *print-right-margin* sys::*prin-linelength*)
+                       (+ (length buffer) pos)))
+          (newline)))
       (when pending-indent      ; do the indent
         (sys::write-spaces pending-indent target-stream)
         (setq pending-indent nil))
@@ -106,12 +108,12 @@ to print the corresponding values, or T for all of them.")
       (t (vector-push-extend ch buffer)))))
 (clos:defmethod stream-line-column ((stream describe-stream))
   (clos:with-slots (target-stream buffer indent) stream
-    (let ((pos (+ (length buffer) (sys::line-position target-stream))))
-      (if pos (max (- pos indent) 0) nil))))
+    (let ((pos (sys::line-position target-stream)))
+      (if pos (max (- (+ (length buffer) pos) indent) 0) nil))))
 (clos:defmethod stream-start-line-p ((stream describe-stream))
   (clos:with-slots (target-stream buffer indent) stream
-    (let ((pos (+ (length buffer) (sys::line-position target-stream))))
-      (if pos (<= pos indent) nil))))
+    (let ((pos (sys::line-position target-stream)))
+      (if pos (<= (+ (length buffer) pos) indent) nil))))
 (clos:defmethod stream-finish-output ((stream describe-stream))
   (describe-stream-flush-buffer stream nil)
   (finish-output (clos:slot-value stream 'target-stream)))
