@@ -1,3 +1,9 @@
+2002-01-16  Sam Steingold  <sds@gnu.org>
+
+	* describe.lisp (describe-stream-flush-buffer, stream-line-column)
+	(stream-start-line-p): check the return value of
+	SYS::LINE-POSITION (it may be NIL!)
+
 2002-01-15  Sam Steingold  <sds@gnu.org>
 
 	* lispbibl.d (OGETTEXT): mark as GC-unsafe
